Removed neon glow and cleaned up hero text

--- a/index.html
+++ b/index.html
@@ -453,7 +453,9 @@
                 </p>
                 <div class="social-icons fade-in">
                     <a class="social-icon" href="https://www.linkedin.com/in/muhammad-masab2217" data-aos="zoom-in"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/Adeel2208" data-aos="zoom-in" data-aos-delay="100"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://wa.me/923036801890" target="_blank" data-aos="zoom-in" data-aos-delay="200">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>                    
                 </div>
             </div>
         </section>
